--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,10 @@
         <sonar.groovy.binaries>target/classes</sonar.groovy.binaries>
   </properties>
 
-
+  <properties>
+      <maven.compiler.source>1.6</maven.compiler.source>
+      <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
