--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
  </organization>
 
   <properties>
-	    <spring.version>4.1.4.RELEASE</spring.version>
+	    <spring.version>5.1</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 	 	<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
@@ -31,10 +31,7 @@
         <sonar.groovy.binaries>target/classes</sonar.groovy.binaries>
   </properties>
 
-  <properties>
-      <maven.compiler.source>1.6</maven.compiler.source>
-      <maven.compiler.target>1.6</maven.compiler.target>
-  </properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
