--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
  </organization>
 
   <properties>
-	    <spring.version>5.1</spring.version>
+	    <spring.version>5.2.8.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 	 	<sonar.host.url>https://sonarcloud.io/</sonar.host.url>
