--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,16 @@
      	<sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
         <sonar.groovy.binaries>target/classes</sonar.groovy.binaries>
   </properties>
-
+    <plugins>
+     <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-compiler-plugin</artifactId>
+         <version>3.5.1</version>
+         <configuration>
+             <source>1.8</source>
+             <target>1.8</target>
+         </configuration>
+     </plugin>
   
   <dependencies>
     <dependency>
@@ -39,7 +48,7 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
-
+    
 	  <dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
