--- a/pom.xml
+++ b/pom.xml
@@ -30,17 +30,7 @@
      	<sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
         <sonar.groovy.binaries>target/classes</sonar.groovy.binaries>
   </properties>
-    <plugins>
-     <plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-compiler-plugin</artifactId>
-         <version>3.5.1</version>
-         <configuration>
-             <source>1.8</source>
-             <target>1.8</target>
-         </configuration>
-     </plugin>
-  
+    
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -93,6 +83,19 @@
 			<version>${spring.version}</version>
 		</dependency>
   </dependencies>
+  <build>
+    <plugins>
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-compiler-plugin</artifactId>
+         <version>3.5.1</version>
+         <configuration>
+             <source>1.8</source>
+             <target>1.8</target>
+         </configuration>
+       </plugin>
+    </plugins>
+  </build>
   <profiles>
 	<profile>
 		<id>sonar</id>
@@ -126,4 +129,5 @@
 		</build>
 	</profile>
   </profiles>
+
 </project>
