--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,9 +5,9 @@ name: Java app CI with maven
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
 
@@ -69,7 +69,7 @@ jobs:
   DeployStaging:
     name: Deploy to STAGING 
     if: github.event.ref == 'refs/heads/main'
-    needs: [DeployWIP , Sonar , Test]
+    needs: [Build]
     runs-on: ubuntu-latest
     environment: 
       name: Staging
